force-app/main/default/objects/Account/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>