force-app/main/default/objects/Account/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Document Number</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>