force-app/main/default/objects/Account/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>