force-app/main/default/objects/Account/fields/Git_Status__c.field-meta.xml
<CustomField>
    <fullName>Git_Status__c</fullName>
    <label>Git Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>