force-app/main/default/objects/Account/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IBAN</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>