force-app/main/default/objects/Account/fields/MAP__c.field-meta.xml
<CustomField>
    <fullName>MAP__c</fullName>
    <formula>IMAGE(&quot;https://maps.googleapis.com/maps/api/staticmap?center=%22&quot;+BillingStreet+&quot;%22,%22&quot;+BillingCity+&quot;%22,%22&quot;+BillingState+&quot;%22,%22&quot;+BillingCountry+&quot;%22&amp;zoom=13&amp;size=600x300&amp;markers=%22&quot;+BillingStreet+&quot;%22&quot;, &quot;MAP2&quot;, 400, 650)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MAP</label>
    <type>Text</type>
</CustomField>