force-app/main/default/objects/Account/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>