force-app/main/default/objects/Account/fields/Same_As__c.field-meta.xml
<CustomField>
    <fullName>Same_As__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same As</label>
    <type>Checkbox</type>
</CustomField>