force-app/main/default/objects/Account/fields/TopLevelAccount__c.field-meta.xml
<CustomField>
    <fullName>TopLevelAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Account)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>