force-app/main/default/objects/Account/recordTypes/ZTETS.recordType-meta.xml
<RecordType>
    <fullName>ZTETS</fullName>
    <active>true</active>
    <label>ZTETS</label>
</RecordType>