force-app/main/default/objects/Account/validationRules/Git_Status_Requires_Active_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Git_Status_Requires_Active_Status</fullName>
    <active>true</active>
    <description>Git Status can only be set to &apos;Published&apos; when the Account Status is &apos;Active&apos;.</description>
    <errorConditionFormula>AND(ISPICKVAL(Git_Status__c, &apos;Published&apos;), NOT(ISPICKVAL(Status__c, &apos;Active&apos;)))</errorConditionFormula>
    <errorMessage>Git Status can only be set to &apos;Published&apos; when the Account Status is &apos;Active&apos;.</errorMessage>
</ValidationRule>